--- a/src/app/componentes/alu/alu.component.html
+++ b/src/app/componentes/alu/alu.component.html
@@ -1,10 +1,11 @@
-<div class="container__body__principal__center__ALU" >
-    <div class="container__span__alu">
-      <div>
-        <span>{{operando1}}</span> ***** <span>{{operando2}}</span>
-      </div>
-         ALU
-        <br>
-          {{operacion}}
-    </div>
+<div class="flex">
+  <div>
+    {{alu.datos1}}
+  </div> |
+  <div>
+    {{alu.instruccion}}
+  </div> |
+  <div>
+    {{alu.datos2}}
   </div>
+</div>
