actualizacion del front

--- a/src/app/componentes/memoria/memoria.component.html
+++ b/src/app/componentes/memoria/memoria.component.html
@@ -6,7 +6,7 @@
             <div class="border p-1 border-black w-full">
                 {{ MAR_MBR.memoria[i] }}
             </div>
-            <div class="border p-1 bg-emerald-400 border-black w-16">
+            <div class="border p-1 bg-[#164e63] border-black w-16">
                 {{ i }}
             </div>
         </div>
