--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<body class="flex justify-center items-center m-6">
+<body class="flex justify-center items-center">
   <form [formGroup]="fGroup" class="flex flex-col justify-around h-full items-center">
     <textarea rows="12"
       class="block p-2.5 text-gray-900 bg-gray-400 rounded-lg border border-gray-700 focus:ring-blue-500 focus:border-blue-500 resize-none text-3xl w-full"
