cambios en el diseño

--- a/src/app/componentes/unidad-control/unidad-control.component.html
+++ b/src/app/componentes/unidad-control/unidad-control.component.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 
-<div class="flex grow-0">
+<div class="flex grow-0 my-2">
     <div class="h-full bg-[#164e63] m-0.5 p-px w-10" [ngClass]="{'isActive': componentesActivo[componentes.BusDatos]}" style="writing-mode: vertical-rl;">
         Bus de datos 
     </div>
