--- a/src/app/componentes/memoria/memoria.component.html
+++ b/src/app/componentes/memoria/memoria.component.html
@@ -1,4 +1,4 @@
-<div class="memo w-full my-2.5">
+<div class="memo w-full">
     <div class="title flex flex-col flex-wrap p-3">Memoria</div>
     <div class="grid grid-cols-2">
         <div class="flex justify-center items-center" *ngFor="let item of memoriaDatos; let i = index"
